# RAG-MCP

./: .gitignore  AGENTS.md  EVALUATION.md  PRD.md  README.md  TASKS.md  pyproject.toml
docs/: ARCHITECTURE.md  ROADMAP.md  WALKTHROUGH.md
scripts/: evaluate.py
src/nexus/: __init__.py  __main__.py  config.py  exceptions.py
src/nexus/cli/: __init__.py  main.py
src/nexus/eval/: __init__.py  extended_ragas.py  ragas.py
src/nexus/ingest/: __init__.py  chunker.py  loader.py  pipeline.py  watcher.py
src/nexus/memory/: __init__.py  store.py
src/nexus/models/: __init__.py  document.py  search.py  source.py
src/nexus/rag/: __init__.py  bm25.py  embedder.py  hybrid.py  reranker.py  search.py
src/nexus/storage/: __init__.py  base.py  metadata.py  vectors.py
src/nexus/tools/: __init__.py  mlx_client.py  server.py
test_data/knowledge_base/: data_science_workflow.md  deep_learning.md  machine_learning.md  nlp_fundamentals.md  python_guide.md
tests/: conftest.py
tests/integration/: test_hybrid_search.py  test_search.py
tests/unit/: test_config.py
tests/unit/cli/: test_cli.py
tests/unit/ingest/: test_chunker.py  test_loader.py
tests/unit/memory/: test_store.py
tests/unit/models/: test_models.py
tests/unit/rag/: test_embedder.py
tests/unit/storage/: test_metadata.py  test_vectors.py
tests/unit/tools/: test_server.py
